[workspace]

members = [
    "contracts/*",
    "crates/*"
]

[profile.dev]
overflow-checks = true

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[profile.test]
overflow-checks = true
