[package]
name = "flags"
version = "1.0.0"
authors = ["Blaž Hrastnik <blaz@smartcontract.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { version = "1.1.5" }
cosmwasm-storage = { version = "1.1.5" }
cw-storage-plus = "0.16.0"
cw2 = "0.16.0"
schemars = "0.8.3"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.24" }
owned = { version = "1.0", path = "../../crates/owned", default-features = false }
access-controller = { version = "1.0", path = "../access-controller", default-features = false, features = ["library"] }
cosmwasm-schema = { version = "1.3.1" }

[dev-dependencies]
cw-multi-test = "0.16.0"
