[package]
name = "ocr2"
version = "1.0.0"
authors = ["Blaž Hrastnik <blaz@smartcontract.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.1.5" }
cosmwasm-storage = { version = "1.1.5" }
cw-storage-plus = "0.16.0"
cw2 = "0.16.0"
cw20 = "0.16.0"
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }
blake2 = "0.10.4"
hex = "0.4.3"
access-controller = { version = "1.0", path = "../access-controller", default-features = false, features = ["library"] }
deviation-flagging-validator = { version = "1.0", path = "../deviation-flagging-validator", default-features = false, features = ["library"] }
owned = { version = "1.0", path = "../../crates/owned" }
cosmwasm-schema = { version = "1.3.1" }

[dev-dependencies]
ed25519-zebra = "3.0.0"
rand = "0.8"
cw-multi-test = "0.16.0"
cw20-base = "0.16.0"
cosmwasm-vm = { version = "1.1.5", features = ["iterator"] }
flags = { path = "../flags", default-features = false, features = ["library"] }
anyhow = "1.0"