[package]
name = "proxy-ocr2"
version = "1.0.0"
authors = ["Blaž Hrastnik <blaz@smartcontract.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
ocr2 = { path = "../ocr2", default-features = false, features = ["library"] }
owned = { version = "1.0", path = "../../crates/owned" }
cosmwasm-schema = { version = "1.3.1" }
cosmwasm-std = { version = "1.1.5" }
cosmwasm-storage = { version = "1.1.5" }
cw-storage-plus = "0.16.0"
cw2 = "0.16.0"

thiserror = { version = "1.0.24" }
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }

[dev-dependencies]
cw-multi-test = "0.16.0"
cw-storage-plus = "0.16.0"
