[package]
name = "proxy-validator"
version = "0.1.0"
authors = ["Blaž Hrastnik <blaz@smartcontract.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
deviation-flagging-validator = { path = "../deviation-flagging-validator", default-features = false }
query-proxy = { path = "../../crates/query-proxy", default-features = false }
cosmwasm-std = { version = "0.16.2" }
cw2 = "0.9.0"

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
